KC faculty update

--- a/www/sds_newsletter_2022.qmd
+++ b/www/sds_newsletter_2022.qmd
@@ -25,7 +25,7 @@ https://www.facebook.com/groups/665780273559948/), a Google group, and a [Slack]
 
 - [**Randi Garcia** was promoted](https://www.smith.edu/news/2022-tenure-and-promotion) to associate professor with tenure!
 - [Fatou Sanogo](https://www.linkedin.com/in/fatoumata-sanogo-447085a8/) got a tenure-track job at Bates! We're wishing Fatou all the best in her next steps. 
-- We hired **Kaitlyn Cook** as a tenure-track assistant professor. [Kaitlyn](https://www.populationmedicine.org/kcook) is a biostatistician coming from the Harvard School of Public Health, where she completed her doctorate and a postdoc. Her research focuses on methodological development for cluster-correlated and interval-censored data, with a particular emphasis on applications to cluster-randomized HIV (or other infectious disease) prevention studies. Kaitlyn will be teaching a range of statistics course and may choose to join the steering committee for the new interdepartmental major in Mathematical Statistics (MST). 
+- We hired **Kaitlyn Cook** as a tenure-track assistant professor. [Kaitlyn](https://www.populationmedicine.org/kcook) is a biostatistician coming from the Harvard T.H. Chan School of Public Health, where she completed her doctorate and a postdoc. Her research focuses on methodological development for cluster-correlated and interval-censored data, with a particular emphasis on applications to cluster-randomized HIV (or other infectious disease) prevention studies. Kaitlyn will be teaching a range of statistics courses and may choose to join the steering committee for the new interdepartmental major in Mathematical Statistics (MST). 
 - We hired **Shiya Cao** as a MassMutual assistant professor of statistical and data sciences. 
 Shiya comes to us from WPI, where she completed her PhD in Information Technology. Her research focuses on [disability inclusion and broader social inclusion topics](https://www.shiyacao.com/). Shiya will be teaching SDS 192 and SDS 100 in her first year. 
 - We hired **Jared Joseph** as a visiting assistant professor for the next two years. [Jared](https://jnjoseph.com/) just completed his PhD in sociology at UC-Davis. His research uses computational techniques and civic data to uncover patterns of behavior that are otherwise unseen. For example, political networks of prohibition gangsters and bias hidden in the text of academic recruitment. Jared will be teaching SDS 192 an application domain course in his first year. 
@@ -57,6 +57,10 @@ I also can’t wait to start teaching at Smith! I will be teaching SDS 192 and S
 Another new thing for me is that I have moved from Central MA to Western MA. This is the first time I have lived in the countryside. I love nature and seeing so much green. However, again, I have many new things to learn, such as gardening, living in harmony with bears. Life is full of adventure. Keep learning, keep improving. I am excited to start my new journey here with great colleagues and great students.
 
 #### Kaitlyn Cook
+
+I’m incredibly honored and excited to be joining the Statistics and Data Science Program at Smith! I’m coming to Northampton by way of Boston, MA, where I've lived for the last seven years: first as a biostatistics graduate student at Harvard T.H. Chan School of Public Health and then as a postdoctoral research fellow at Harvard Medical School and Harvard Pilgrim Health Care Institute. My research focuses on statistical methods development for clinical trials with (a) cluster randomization schemes, wherein entire groups of individuals (such as families, schools, or communities) are collectively assigned to a particular treatment arm, and (b) time-to-event endpoints, where a “time-to-event” endpoint might be something like the time from study enrollment to COVID-19 infection or the time to progression from HIV to AIDS. I published a paper on this topic in _Biometrics_ this past August (a [preprint is available here](https://biostats.bepress.com/harvardbiostat/paper220/) for those who are interested!) and have spent the last year working on both a pediatric sleep medicine trial and a COVID-19 treatment/prevention trial. I’m looking forward to continuing this research while at Smith, as well as to teaching _Probability_ (MTH 246) and _Introduction to Probability and Statistics_ (SDS 220) this fall!
+
+Outside of the classroom, I dedicate myself to watching (too much) reality TV---this past winter I managed to watch all 19 seasons of Top Chef over the course of two and a half months, though sadly without any noticeable improvement in my own culinary skills---and am also an avid reader, an avid Zumba-er, and a sometimes runner. 
 
 #### Randi Garcia
 
