--- a/www/sds_newsletter_2022.qmd
+++ b/www/sds_newsletter_2022.qmd
@@ -97,6 +97,9 @@ In the Fall, I'll be teaching *Data and Social Justice* (SDS 189) and *Introduct
 
 - [Emily Flynn '14](https://www.linkedin.com/in/emily-flynn-863511179/): I finished my PhD in Biomedical Informatics at Stanford in summer of 2021 and started a job as a Senior Biological Data Scientist at UCSF, where I am working on a data science team in the department of immunology. I'm really enjoying all the learning in my new role, and helping researchers with exciting projects. In my spare time, I enjoy biking around the bay area, going on gorgeous hikes, and spending time with my cat. 
 
+- [Lizzy (Atkins) Offermann '15](https://www.linkedin.com/in/elizabethoffermann/): Life has been busy over the last year in the Offermann household! I graduated with my master's degree in Clinical and Translational Research from George Washington University, changed jobs and now work for an amazing healthcare tech company aiming to [make healthcare more accessible for everyone](https://www.color.com), have continued my work as the Treasurer for the Class of 2015 Cabinet, and recently finished up a busy admissions season as the Smith Club of Baltimore's Alumnae Admission Coordinator for the tri-state area. Some major professional highlights involve working on all of the data for my company's [COVID-19 Antiviral Treatment Programs](https://www.color.com/covid19) across multiple states in the US, our [ship-to-home preventative care kit](https://www.color.com/essential-care), and most recently our partnership with the CDC and White House to make [COVID-19 testing more accessible](https://www.linkedin.com/posts/color_community-covid19testing-cdc-activity-6952676033481371648-pqwP)! My involvement with these three projects and others ranges from data ingestion from the UI, data wrangling, modeling, database creation, analytics, visualization, and working with the customers and stakeholders to fully understand the story their data is telling them. We have open positions on my team and other fabulous teams at Color, so if you are looking to get into healthcare tech - reach out!  
+Personally, our twin toddlers are getting closer and closer to turning 5 years old and entering public school - wild how time flies! My husband and I just love to watch them grow, learn, and form into their own little people with full personalities. We have been very thankful to avoid COVID so far and the kiddos are almost fully vaxxed now, too - fingers crossed we can keep it away until they get their final dose!
+
 - [Sara Stoudt '15](https://sastoudt.github.io/): My first year as an assistant professor at Bucknell University is in the books, and now I'm gearing up to teach a first-year seminar in the fall on "Storytelling with Data". Send me your favorite data stories! Here are some things I'm proud of this year: [for the birders](https://doi.org/10.1073/pnas.2110156119), [for the teachers](https://doi.org/10.1080/26939169.2022.2082602), and [for the creatives](https://datasciencebydesign.org/book).
 
 ## What's next? 
