--- a/www/sds_newsletter_2022.qmd
+++ b/www/sds_newsletter_2022.qmd
@@ -80,9 +80,15 @@ In addition to my teaching, I’ll be focusing on translating my dissertation in
 
 Season three of the pandemic was another year like no other. It was great to be back on campus with students chatting about statistics and machine learning. This past fall, I was a co-organizer for the [Teaching ML workshop](https://teaching-ml.github.io/2021/) which included a talk by [Prof. Alicia Johnson](https://ajohns24.github.io/portfolio/), collaborator and co-author of Miles Ott '01. (Our next workshop is in [September](https://teaching-ml.github.io/2022/); join us!) I've continued working with students on my collaborative NSF TRIPODS+X grant during the academic year and to work virtually with four students through SURF. 
 
-I'm teaching both _Modeling for Machine Learning_ (SDS 293) and _Computational Machine Learning_ (CSC294) this fall. Then I'll be on sabbatical in the spring. Looking forward to seeing everyone again this fall! 
+I'm teaching both _Modeling for Machine Learning_ (SDS 293) and _Computational Machine Learning_(CSC294) this fall. Then I'll be on sabbatical in the spring. Looking forward to seeing everyone again this fall! 
 
 #### [Scott LaCombe](www.scottlacombe.com)
+
+I can't believe I'm beginning my third year at Smith and was so grateful to be able to see and work with student during the last academic year. I have particularly enjoyed working with students on creating a new database of racial disparities in state-level population health outcomes. 
+
+In this last year, my co-authored book titled [*Choosing the Future: Technology and Opportunity in Communities*](https://global.oup.com/academic/product/choosing-the-future-9780197585757?cc=us&lang=en&) came out, where we explore the political and economic effects of broadband in counties and cities across the United States. I've also continued my research on public policy in the American states, and hope to continue working with students to think critically about the data generating process. 
+
+This upcoming year, I will be teaching two courses for the Government department in the Fall (Gov 200 and GOV 306) and in the Spring will be teaching *Introduction to Probability and Statistics* (SDS 220) as well as a *seminar in Network analysis in Political Science* (SDS/GOV 338- which will count towards your application domain!)
 
 #### [Lindsay Poirier](https://lindsaypoirier.github.io/)
 
