BB edits to 2023 newsletter; #17

--- a/www/sds_newsletter_2023.qmd
+++ b/www/sds_newsletter_2023.qmd
@@ -24,17 +24,19 @@ https://www.facebook.com/groups/665780273559948/), a Google group, and a [Slack]
 
 ## Faculty Updates 
 
-- [**Albert Kim** was promoted](https://www.smith.edu/news/2023-tenure-and-promotion) to associate professor with tenure!
+- [**Albert Kim** was promoted](https://www.smith.edu/news/2023-tenure-and-promotion) to associate professor with tenure! **Ben Baumer** was also promoted to full Professor. 
 - We hired [**Casey Berger**](https://www.caseyeberger.com/) to a joint tenure-track position with the Physics department. Casey has been teaching at Smith already and her research is in applying high performance computing and machine learning methods to many-body quantum systems. She has already designed a new course, SDS 271, which she will offer in the fall as a Python-based alternative to SDS 270. Casey was just recently elected as a Member-At-Large for the Topical Group in Data Science within the American Physics Society. We're super-excited to keep her at Smith!
 - We also hired **Rebecca Kurtz-Garcia** into a joint tenure-track position with the Mathematical Sciences department. Rebecca comes to us from the University of California, Riverside, where she recently completed her Ph.D. in statistics. She is starting as a Project NExT fellow this summer, and will be teaching introductory statistics and mathematical statistics in her first year. Yay!
-- We'll be searching for **two** tenure-track positions this year, both of which are joint with other departments!
-    - a joint position with the Mathematical Sciences department for a mathematical statistician  
-    - a joint position with the Physics department for a computational physicist 
-  
+
 
 
 #### [Ben Baumer](https://beanumber.github.io/www)
 
+I am about to embark on what I can only hope will be a fantastic adventure during the full-year sabbatical I'm now starting: my family and I will spend the year in Medellín, Colombia! 
+I will have an appointment as a Visiting Faculty member at the [Universidad EAFIT](https://www.eafit.edu.co/), and I am also anticipating extending my current role as interim Editor-in-Chief of the [*Journal of Quantitative Analysis in Sports*](https://www.degruyter.com/journal/key/jqas/html?lang=en) for a three-year term. 
+Learning a new language in your forties hasn't been easy, but I took SPN 200 at Smith this spring with Prof. Adrián Gras-Velazquez and learned a lot while making some new friends. 
+
+Cuando vuelvo hablaremos español juntos!
 
 #### Shiya Cao
 
